# BetMatrix

./: .gitignore  README.md  nfl_architecture.html  rewrite_history.sh
backend/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  update_predictions.py
backend/app/api/fetch_data_api/: routes.py  services.py
backend/app/core/: constant.py  query.py
backend/app/pipeline/: __init__.py  clean.py  crud_db.py  data_load.py  feature.py  get_data.py  glicko.py  inference.py  schedule.py  schedule_inference.py  schedule_scripts.py  setup_database.py
backend/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
backend/catboost_info/learn/: events.out.tfevents
backend/catboost_info/test/: events.out.tfevents
backend/notebooks/: data_cleaning.ipynb  data_exploration.ipynb  feature_engineering.ipynb  model_train.ipynb  model_train_regression.ipynb
backend/notebooks/.ipynb_checkpoints/: data_cleaning-checkpoint.ipynb
backend/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
backend/notebooks/catboost_info/learn/: events.out.tfevents
backend/notebooks/catboost_info/test/: events.out.tfevents
backend/test/test_api/: __init__.py
backend/test/test_api/test_fetch_data_api/: __init__.py  test_routes.py  test_services.py
backend/test/test_pipeline/: .coverage  test_clean.py  test_crud_db.py  test_crud_db_functions.py  test_data_load.py  test_feature.py  test_get_data.py  test_glicko.py  test_inference.py  test_schedule.py  test_schedule_inference.py  test_schedule_scripts.py  test_setup_database.py
frontend/: Dockerfile  app.py  docker-compose.yml  index.html  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AccuracySummary.tsx  GameInformation.tsx  Header.tsx  InjuryReport.tsx  Last5Games.tsx  MatchCard.tsx  SearchBar.tsx  SeasonLeaders.tsx  TeamStats.tsx  WeekNavigation.tsx  YearSelector.tsx
frontend/src/hooks/: use-predictions.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Home.tsx  Index.tsx  MatchDetails.tsx
